@@ -1,5 +1,5 @@
 APACHE 2.0 STATUS:                                              -*-text-*-
-Last modified at [$Date: 2002/10/31 05:57:33 $]
+Last modified at [$Date: 2002/11/08 22:42:18 $]
 
 Release:
 
@@ -525,11 +525,9 @@ EXPERIMENTAL MODULES:
 
     * mod_mem_cache/mod_disk_cache: Complete implementing config
       directives (mod_disk_cache: CacheExpiryCheck and GC directives
-      including CacheGc*, CacheSize, CacheMaxFileSize, CacheMinFileSize,
-      and, CacheTimeMargin) (mod_mem_cache: MCacheMaxObjectCount) and
-      (mod_cache: cacheForceCompletion). 
-
-    * mod_cache/mod_mem_cache/mod_disk_cache: Documentation.
+      including CacheGc*, CacheSize, and, CacheTimeMargin)
+      (mod_mem_cache: MCacheMaxObjectCount) and
+      (mod_cache: CacheForceCompletion). 
 
     mod_auth_ldap/util_ldap:
     
